[package]
name = "cumulus-client-collator-discovery"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Parachain collator authority discovery — keeps collators connected via reserved peers on the block-announce protocol."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
futures-timer = { workspace = true }
log = { workspace = true, default-features = true }

# Substrate
prometheus-endpoint = { workspace = true, default-features = true }
sc-authority-discovery = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-network-sync = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-authority-discovery = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
