[package]
name = "sc-statement-store"
version = "10.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Substrate statement store."
readme = "README.md"

[lints]
workspace = true

[features]
test-helpers = ["anyhow", "scale-info", "subxt", "subxt-signer"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-channel = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true, default-features = true }
parity-db = { workspace = true }
parking_lot = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-keystore = { workspace = true, default-features = true }
sc-network-statement = { workspace = true, default-features = true }
sc-utils = { workspace = true }
scale-info = { workspace = true, default-features = true, optional = true }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-statement-store = { workspace = true, default-features = true }
sp-storage = { workspace = true, default-features = true }
subxt = { version = "0.50", features = ["jsonrpsee", "native"], optional = true }
subxt-signer = { version = "0.50", features = ["sr25519"], optional = true }
tokio = { features = ["time"], workspace = true, default-features = true }

[dev-dependencies]
criterion = { workspace = true, default-features = true }
sp-tracing = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "statement_store"
harness = false
required-features = []
