[package]
name = "sc-storage-chain-sync"
description = "Substrate storage-chain bitswap peer rotation and indexed transaction fetching service"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
cid = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
futures-timer = { workspace = true }
log = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-client-db = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-network-sync = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-externalities = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-state-machine = { workspace = true, default-features = true }
sp-transaction-storage-proof = { workspace = true, default-features = true }
sp-trie = { workspace = true, default-features = true }
thiserror = { workspace = true }

[dev-dependencies]
prost = { workspace = true }
rstest = { workspace = true }
sp-crypto-hashing = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
sp-version = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["macros", "rt"] }
tracing = { workspace = true, default-features = true }
tracing-log = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true }
