[package]
name = "sc-virtualization"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Host-side PolkaVM backend driving the sp-virtualization host functions"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
polkavm = { workspace = true }
sp-virtualization = { workspace = true, default-features = true }

[dev-dependencies]
sp-io = { workspace = true, default-features = true }
sp-storage = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
sp-virtualization-test-fixture = { workspace = true }
