[package]
name = "sp-dap"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Primitives for the Dynamic Allocation Pool (DAP)."

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
]
