[package]
name = "polkadot-subsystem-test-sim-macros"
version = "0.1.0"
description = "Proc-macros for the polkadot-subsystem-test-sim test framework."
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
