[package]
name = "remote-ext-tests-psm"
publish = false
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
asset-hub-westend-runtime = { workspace = true, default-features = true }

frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
pallet-assets = { workspace = true, default-features = true }
pallet-psm = { workspace = true, default-features = true }
pallet-psm-remote-tests = { workspace = true }
sp-core = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }

xcm = { workspace = true }

clap = { features = ["derive"], workspace = true }
log = { workspace = true, default-features = true }
tokio = { features = ["macros"], workspace = true, default-features = true }
