[package]
name = "fp-coretime"
version = "0.1.0"
description = "Primitives for Polkadot Coretime"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-weights/std",
]
