[package]
name = "pallet-vesting-precompiles"
version = "0.1.0"
authors.workspace = true
edition = "2024"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Vesting precompile exposing pallet-vesting to EVM contracts via pallet-revive."

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
alloy-core = { workspace = true, features = ["sol-types"] }
codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-revive = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-vesting = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"alloy-core/std",
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-revive/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-revive/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
	"sp-runtime/try-runtime",
]
